index modified and hello added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>welcome to my page</p>
+    <p>welcome to the second commit</p>
+     <p>welcome to the third commit</p>
 </body>
 </html>
