index modified with hello unstaged

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>welcome to my page</p>
     <p>welcome to the second commit</p>
-     <p>welcome to the third commit</p>
+    <p>welcome to the third commit</p>
+    <p>welcome to the fourth commit</p>
 </body>
 </html>
