--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>welcome to the third commit</p>
     <p>welcome to the fourth commit</p>
     <p>welcome to the fifth commit</p>
+    <p>welcome to the sixth commit</p>
 </body>
 </html>
