--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>welcome to the fourth commit</p>
     <p>welcome to the fifth commit</p>
     <p>welcome to the sixth commit</p>
+    <h1>FEAT-1</h1>
 </body>
 </html>
