feat-2 1st commit

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p>welcome to the fourth commit</p>
     <p>welcome to the fifth commit</p>
     <p>welcome to the sixth commit</p>
+    <h1>FEAT-2</h1>
 </body>
+
 </html>
