--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>welcome to the fifth commit</p>
     <p>welcome to the sixth commit</p>
     <h1>FEAT-1</h1>
+    <h1>FEAT-3</h1>
 </body>
 </html>
